--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,12 @@
 .MuiPagination-ul {
   justify-content: center;
 }
+.loader{
+  position: fixed;
+  display: flex;align-items: center;justify-content: center;
+  left: 0;top: 0;
+  z-index: 1000;
+  background: rgba(255, 255, 255, 0.6);
+  width: 100%;
+  height: 100%;
+}
