--- a/src/App.css
+++ b/src/App.css
@@ -17,3 +17,9 @@
   width: 100%;
   height: 100%;
 }
+.products__bottom{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
